--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ div {
     align-items: center;
 }
 
+#content {
+    max-width: 500;
+    margin: 0 auto;
+}
+
 header {
     display: grid;
     grid-template-columns: auto 1fr;
@@ -45,4 +50,5 @@ footer {
     text-align: center;
     font-family: Georgia,Times,Times New Roman,serif;
     padding: 10px;
+    border-radius: 10px;
 }
