--- a/css/style.css
+++ b/css/style.css
@@ -51,5 +51,5 @@ footer {
     font-family: Georgia,Times,Times New Roman,serif;
     padding: 10px;
     border-radius: 10px;
-
+    font-size: 26px;
 }
