--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    max-width: 50%;
     background-color: white;
     font-family: Georgia,Times,Times New Roman,serif;
 }
@@ -14,23 +15,18 @@ div {
     align-items: center;
 }
 
-#content {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
 header {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-    background-color: #c86bfa;
+    background-color: #d38ff8;
     padding: 1em;
     border-radius: 10px;
 }
 
 .image {
     text-align: center;
-    box-shadow: black;
+    box-shadow: #c361f8;
 }
 
 .main-headline {
