--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     max-width: 50%;
     background-color: white;
     font-family: Georgia,Times,Times New Roman,serif;
+    padding: 5px 25px;
+    margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -36,6 +38,10 @@ header {
 main {
     background-color: white;
 }
+
+#content {
+    max-width: 960px;
+    margin: 0 auto;
 
 .main-headline-2 {
    border-bottom: 1px solid black; 
